修改大部分完成（剩下input的線框＋彈跳視窗）

--- a/MyQRLink02.html
+++ b/MyQRLink02.html
@@ -73,35 +73,40 @@
                 <!-- 01.-->
                 <div class='input_box borderGray'>
                   <div class='social_box member_box icon-qrcode---FontAwesome'></div>
-                  <p class='inEnter'>APR 21, 2020 @ 4:32 PM</p>
+                  <!-- 10/05 新增樣式 in_LH42 -->
+                  <p class='inEnter in_LH42'>APR 21, 2020 @ 4:32 PM</p>
                   <a href='MyQRLink03.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
                 </div>
 
                 <!-- 02.-->
                 <div class='input_box borderGray'>
                   <div class='social_box member_box icon-qrcode---FontAwesome'></div>
-                  <p class='inEnter'>APR 21, 2020 @ 4:32 PM</p>
+                  <!-- 10/05 新增樣式 in_LH42 -->
+                  <p class='inEnter in_LH42'>APR 21, 2020 @ 4:32 PM</p>
                   <a href='MyQRLink03.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
                 </div>
 
                 <!-- 03.-->
                 <div class='input_box borderGray'>
                   <div class='social_box member_box icon-qrcode---FontAwesome'></div>
-                  <p class='inEnter'>APR 21, 2020 @ 4:32 PM</p>
+                  <!-- 10/05 新增樣式 in_LH42 -->
+                  <p class='inEnter in_LH42'>APR 21, 2020 @ 4:32 PM</p>
                   <a href='MyQRLink03.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
                 </div>
 
                 <!-- 04.-->
                 <div class='input_box borderGray'>
                   <div class='social_box member_box icon-qrcode---FontAwesome'></div>
-                  <p class='inEnter'>APR 21, 2020 @ 4:32 PM</p>
+                  <!-- 10/05 新增樣式 in_LH42 -->
+                  <p class='inEnter in_LH42'>APR 21, 2020 @ 4:32 PM</p>
                   <a href='MyQRLink03.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
                 </div>
 
                 <!-- 05.-->
                 <div class='input_box borderGray'>
                   <div class='social_box member_box icon-qrcode---FontAwesome'></div>
-                  <p class='inEnter'>APR 21, 2020 @ 4:32 PM</p>
+                  <!-- 10/05 新增樣式 in_LH42 -->
+                  <p class='inEnter in_LH42'>APR 21, 2020 @ 4:32 PM</p>
                   <a href='MyQRLink03.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
                 </div>
               </div>  
