--- a/SavePage02.html
+++ b/SavePage02.html
@@ -80,7 +80,8 @@
                   <div class='social_box serch_box icon-search'></div>
                   <input class='inEnter addEnter' type="text" value="Search" onfocus="this.value=''" onblur="this.value='Search'">
                 </div>
-                <a href='SavePage01.html' class='btn_done'>Done</a>
+                <!-- 10/05 新增樣式 btn_done_ser -->
+                <a href='SavePage01.html' class='btn_done btn_done_ser'>Done</a>
               </div>
             </div>
 
