--- a/account.html
+++ b/account.html
@@ -52,21 +52,30 @@
         <main>
           <div class='cent_boxs cent_web'>
             <div class='cent_box'>
-              <p class='m_title_type type_uppercase' style='line-height:42px;'>My Account</p>
-              <button class='link_gray2 type_uppercase order_right' onclick="openModal();currentSlide(1)">delete My Account</button>
+              <p class='m_title_type type_uppercase'>Lucy Redder</p>
             </div>
           </div>
 
-          <div class='cent_boxs'>
+          <div class='cent_boxs cent_bottom_box' style='min-height: 500px;'>
             <div class='cent_box cent_box35'>
               <div class='all_box magD30'>
-                <p class='type_data_title'>Change My Password</p>
+                <p class='type_data_title'>My Account Info</p>
                 <a href='account02.html' class='link_icon icon-createmode_editedit'></a>
               </div>
 
-              <div class='input_box borderGray'>
-                <input class='inEnter addEnter pad815' value="******" onfocus="this.value=''" onblur="this.value='******'" >
+              <p class='type_13'>ID:</p>
+              <div class='input_box borderBlue'>
+                <input class='toEnter on_net01' disabled="teresa@zeusdesign.com.tw" type="text" value="teresa@zeusdesign.com.tw">
+              </div>
+
+              <p class='type_13'>Password:</p>
+              <div class='input_box borderBlue'>
+                <input class='inEnter pad815' value="******" onfocus="this.value=''" onblur="this.value='******'" >
                 <button class='btn_status_box w_50 c_gray icon-eye-slash'></button>
+              </div>
+
+              <div class='all_box w_cent magTop30 bottom_box'>
+                <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">delete My Account</button>
               </div>
             </div>
 
@@ -79,33 +88,33 @@
               <div class='all_box'>
                 <!-- social data -->
                 <!-- 01.email-->
-                <div class='input_box borderGray'>
+                <div class='input_box borderBlue'>
                   <div class='social_box icon-email'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="abcdef568328@gmail.com">
+                  <input class='inEnter in_all' type="text" value="abcdef568328@gmail.com">
                 </div>
 
                 <!-- 02.Instagram -->
-                <div class='input_box borderGray'>
+                <div class='input_box borderBlue'>
                   <div class='social_box icon-instagram'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="LucyRedde">
+                  <input class='inEnter in_all' type="text" value="LucyRedde">
                 </div>
 
                 <!-- 03.Snapchat -->
-                <div class='input_box borderGray'>
+                <div class='input_box borderBlue'>
                   <div class='social_box icon-snapchat'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="lucyredde23">
+                  <input class='inEnter in_all' type="text" value="lucyredde23">
                 </div>
 
                 <!-- 04.Facebook -->
-                <div class='input_box borderGray'>
+                <div class='input_box borderBlue'>
                   <div class='social_box icon-facebook'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="lr123">
+                  <input class='inEnter in_all' type="text" value="lr123">
                 </div>
 
                 <!-- 05.Phone -->
-                <div class='input_box borderGray'>
+                <div class='input_box borderBlue'>
                   <div class='social_box icon-phone'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="0912345678">
+                  <input class='inEnter in_all' type="text" value="0912345678">
                 </div>
               </div>  
             </div>
