--- a/account03.html
+++ b/account03.html
@@ -52,24 +52,30 @@
         <main>
           <div class='cent_boxs cent_web'>
             <div class='cent_box'>
-              <p class='m_title_type type_uppercase' style='line-height:42px;'>My Account</p>
-              <button class='link_gray2 type_uppercase order_right' onclick="openModal();currentSlide(1)">delete My Account</button>
+              <p class='m_title_type type_uppercase'>Lucy Redder</p>
+              <!-- <button class='link_gray2 type_uppercase order_right' onclick="openModal();currentSlide(1)">delete My Account</button> -->
             </div>
           </div>
 
-          <div class='cent_boxs'>
+          <div class='cent_boxs cent_bottom_box' style='min-height: 500px;'>
             <div class='cent_box cent_box35'>
               <div class='all_box magD30'>
-                <p class='type_data_title'>Change My Password</p>
+                <p class='type_data_title'>My Account Info</p>
                 <a href='account02.html' class='link_icon icon-createmode_editedit'></a>
               </div>
 
+              <p class='type_13'>ID:</p>
+              <div class='input_box'>
+                <input class='toEnter addEnter borderGray' value="teresa@zeusdesign.com.tw" onfocus="this.value=''" onblur="this.value='teresa@zeusdesign.com.tw'">
+              </div>
+
+              <p class='type_13'>Password:</p>
               <div class='input_box borderGray'>
                 <input class='inEnter addEnter pad815' value="******" onfocus="this.value=''" onblur="this.value='******'" >
                 <button class='btn_status_box w_50 c_gray icon-eye-slash'></button>
               </div>
 
-              <div class='all_box w_cent magTop30'>
+              <div class='all_box w_cent magTop30 bottom_box'>
                 <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">delete My Account</button>
               </div>
             </div>
@@ -119,6 +125,10 @@
                   <div class='social_box icon-phone'></div>
                   <input class='inEnter addEnter' type="text" value="0912345678">
                   <a class='btn_status_box c_gray member icon-cancel'></a>
+                </div>
+
+                <div class='all_box w_cent magTop30 bottom_box2'>
+                  <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">delete My Account</button>
                 </div>
               </div>  
             </div>
