--- a/NetWorkPage06.html
+++ b/NetWorkPage06.html
@@ -149,24 +149,27 @@
         <span class="lightbox_done" onclick="closeModal()">Done</span>
         <!-- <span class="close icon-x" onclick="closeModal()"></span> -->
 
+        <!-- 10/05 按照字母排列 -->
         <div class='modal_box'>
           <div class='check_social'><input class='icon-email' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-instagram' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-snapchat' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-facebook' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-phone' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-linkedin' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-twitter' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-youtube' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-tiktok' type="checkbox" name=""></div>
+
           <div class='check_social'><input class='icon-discord' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-facebook' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-groupme' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-instagram' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-linkedin' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-line' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-phone' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-reddit' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-snapchat' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-slack' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-skype' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-reddit' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-groupme' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-whatsapp' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-line' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-www' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-twitter' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-tiktok' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-venmo' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-whatsapp' type="checkbox" name=""></div>   
+          <div class='check_social'><input class='icon-youtube' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-www' type="checkbox" name=""></div>        
         </div>
       </div>
     </div>
