--- a/account02.html
+++ b/account02.html
@@ -52,18 +52,23 @@
         <main>
           <div class='cent_boxs cent_web'>
             <div class='cent_box'>
-              <p class='m_title_type type_uppercase' style='line-height:42px;'>My Account</p>
-              <button class='link_gray2 type_uppercase order_right' onclick="openModal();currentSlide(1)">delete My Account</button>
+              <p class='m_title_type type_uppercase'>Lucy Redder</p>
             </div>
           </div>
 
-          <div class='cent_boxs'>
+          <div class='cent_boxs cent_bottom_box' style='min-height: 500px;'>
             <div class='cent_box cent_box35'>
               <div class='all_box magD30'>
-                <p class='type_data_title'>Change My Password</p>
+                <p class='type_data_title'>My Account Info</p>
                 <a href='account.html' class='btn_done'>Done</a>
               </div>
 
+              <p class='type_13'>ID:</p>
+              <div class='input_box'>
+                <input class='toEnter addEnter borderGray' value="teresa@zeusdesign.com.tw" onfocus="this.value=''" onblur="this.value='teresa@zeusdesign.com.tw'">
+              </div>
+
+              <p class='type_13'>Password:</p>
               <div class='input_box borderGray'>
                 <input class='inEnter addEnter pad815' value="******" onfocus="this.value=''" onblur="this.value='******'" >
                 <button class='btn_status_box w_50 c_gray icon-eye-slash'></button>
@@ -78,6 +83,10 @@
                 <input class='inEnter addEnter pad815' value="Confirm new password" onfocus="this.value=''" onblur="this.value='Confirm new password'" >
                 <button class='btn_status_box w_50 c_gray icon-eye-slash'></button>
               </div>
+
+              <div class='all_box w_cent magTop30 bottom_box'>
+                <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">delete My Account</button>
+              </div>
             </div>
 
             <div class='cent_box cent_box65 borderGray_left'>
@@ -89,33 +98,37 @@
               <div class='all_box'>
                 <!-- social data -->
                 <!-- 01.email-->
-                <div class='input_box borderGray'>
+                <div class='input_box borderBlue'>
                   <div class='social_box icon-email'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="abcdef568328@gmail.com">
+                  <input class='inEnter in_all' type="text" value="abcdef568328@gmail.com">
                 </div>
 
                 <!-- 02.Instagram -->
-                <div class='input_box borderGray'>
+                <div class='input_box borderBlue'>
                   <div class='social_box icon-instagram'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="LucyRedde">
+                  <input class='inEnter in_all' type="text" value="LucyRedde">
                 </div>
 
                 <!-- 03.Snapchat -->
-                <div class='input_box borderGray'>
+                <div class='input_box borderBlue'>
                   <div class='social_box icon-snapchat'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="lucyredde23">
+                  <input class='inEnter in_all' type="text" value="lucyredde23">
                 </div>
 
                 <!-- 04.Facebook -->
-                <div class='input_box borderGray'>
+                <div class='input_box borderBlue'>
                   <div class='social_box icon-facebook'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="lr123">
+                  <input class='inEnter in_all' type="text" value="lr123">
                 </div>
 
                 <!-- 05.Phone -->
-                <div class='input_box borderGray'>
+                <div class='input_box borderBlue'>
                   <div class='social_box icon-phone'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="0912345678">
+                  <input class='inEnter in_all' type="text" value="0912345678">
+                </div>
+
+                <div class='all_box w_cent magTop30 bottom_box2'>
+                  <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">delete My Account</button>
                 </div>
               </div>  
             </div>
