--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 
           <div class='ir_boxs magTop45'>
             <a href="NetWorkPage01.html" class='link_blueLine have_mark magRight10'>JOIN NEW NETWORK</a>
+            <!-- 10/05 拿掉樣式 in_btn_r -->
             <!-- 9/26 修改樣式link_brightBlue2 -->
-            <a href="CreatQRLink01.html" class='link_brightBlue2 have_mark m_magTop15 in_btn_r'>CREATE CUSTOM QR LINK</a>
+            <a href="CreatQRLink01.html" class='link_brightBlue2 have_mark m_magTop15'>CREATE CUSTOM QR LINK</a>
           </div>
         </div>
       </div>
