--- a/NetWorkList_ot01.html
+++ b/NetWorkList_ot01.html
@@ -76,9 +76,10 @@
 
               <!-- 網頁版・admin資訊露出・開始 (對應123行，同一個東西) -->
               <div class='all_box m_not_show'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
+                <!-- 10/06 新增樣式no_pb10 -->
+                <p class='team_title no_pb10'>Admin</p>
+                <!-- 10/06 拿掉樣式input_box_top15，新增樣式input_box_TD85 -->
+                <div class='input_box input_box_TD85 borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
                   <input class='inEnter' type="text" value="JohnWang">
                   <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
@@ -97,10 +98,13 @@
                 </div>
 
                 <!-- member -->
-                <div class='input_box borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="member name01">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                <!-- 10/06 新增樣式borderBrightblue -->
+                <div class='input_box borderBrightblue'>
+                  <!-- 10/06 新增樣式social_box2，拿掉member_box-->
+                  <div class='social_box social_box2 icon-user---anticoncopy-3'></div>
+                  <input class='inEnter' type="text" value="LUCY REDDER">
+                  <!-- 10/06 新增樣式icon-remove_red_eyevisibility + style，拿掉icon-Address-Card---FontAwesomeCopy-3-->
+                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-remove_red_eyevisibility' style='padding-right:10px;'></a>
                 </div>
 
                 <div class='input_box borderGray'>
@@ -144,9 +148,10 @@
 
               <!-- 手機版・admin資訊露出・開始 -->
               <div class='all_box padTB15 w_not_show'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
+                <!-- 10/06 新增樣式no_pb10 -->
+                <p class='team_title no_pb10'>Admin</p>
+                <!-- 10/06 拿掉樣式input_box_top15，新增樣式input_box_TD85 -->
+                <div class='input_box input_box_TD85 borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
                   <input class='inEnter' type="text" value="JohnWang">
                   <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
