--- a/on_NetWorkPage04.html
+++ b/on_NetWorkPage04.html
@@ -77,9 +77,10 @@
 
               <!-- 網頁版・admin資訊露出・開始 (對應123行，同一個東西) -->
               <div class='all_box m_not_show'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
+                <!-- 10/06 新增樣式no_pb10 -->
+                <p class='team_title no_pb10'>Admin</p>
+                <!-- 10/06 拿掉樣式input_box_top15，新增樣式input_box_TD85 -->
+                <div class='input_box input_box_TD85 borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
                   <input class='inEnter' type="text" value="Lucy Redder">
                   <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
@@ -145,9 +146,10 @@
 
               <!-- 手機版・admin資訊露出・開始 -->
               <div class='all_box padTB15 w_not_show'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
+                <!-- 10/06 新增樣式no_pb10 -->
+                <p class='team_title no_pb10'>Admin</p>
+                <!-- 10/06 拿掉樣式input_box_top15，新增樣式input_box_TD85 -->
+                <div class='input_box input_box_TD85 borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
                   <input class='inEnter' type="text" value="Lucy Redder">
                   <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
