fix list finished

--- a/SavePage01_1.html
+++ b/SavePage01_1.html
@@ -63,16 +63,32 @@
           </div>
 
           <div class='cent_boxs'>
-            <!-- search -->
             <div class='cent_serch_box'>
-              <div class='all_box w_not_show'>
+              <!-- 10/6 新增樣式 magD30 -->
+              <div class='all_box magD30'>
+                <!-- 10/06 拿掉 w_not_show -->
                 <p class='type_data_title order_left'>Saved Contacts Pages</p>
+              </div>
+            </div>
+
+            <!-- 10/6 新增樣式 cent_box cent_box35 整個區域 -->
+            <div class='cent_box cent_box35'>
+              <div class='all_box'>
+                <div class='team_pic_box'><img src="img/team.png"></div>
+                <div class='team_type_box'>
+                  <div class='all_box'>
+                    <a  href="on_NetWorkPage04.html" class='team_title'>Intern Team</a>
+                    <a href="on_NetWorkPage04_3.html" class='link_icon icon-qrcode---FontAwesome'></a>
+                  </div>
+                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
+                </div>
               </div>
             </div>
 
             <i class='m_border'></i><!-- 手機版・虛線 -->
 
-            <div class='cent_box borderGray_left'>
+            <!-- 10/6 新增 cent_box65 整個區域 -->
+            <div class='cent_box cent_box65 borderGray_left'>
               <div class='all_box magD30'>
                 <p class='type_data_title'>Jim John</p>
               </div>
