--- a/account.html
+++ b/account.html
@@ -79,6 +79,8 @@
               </div>
             </div>
 
+            <i class='m_border'></i><!-- 手機版・虛線 -->
+
             <div class='cent_box cent_box65 borderGray_left'>
               <div class='all_box magD30'>
                 <p class='type_data_title'>Lucy Redder</p>
@@ -115,6 +117,10 @@
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-phone'></div>
                   <input class='inEnter in_all' type="text" value="0912345678">
+                </div>
+
+                <div class='all_box w_cent magTop30 bottom_box2'>
+                  <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">delete My Account</button>
                 </div>
               </div>  
             </div>
