--- a/account02.html
+++ b/account02.html
@@ -89,6 +89,8 @@
               </div>
             </div>
 
+            <i class='m_border'></i><!-- 手機版・虛線 -->
+
             <div class='cent_box cent_box65 borderGray_left'>
               <div class='all_box magD30'>
                 <p class='type_data_title'>Lucy Redder</p>
