--- a/account03.html
+++ b/account03.html
@@ -80,6 +80,8 @@
               </div>
             </div>
 
+            <i class='m_border'></i><!-- 手機版・虛線 -->
+
             <div class='cent_box cent_box65 borderGray_left'>
               <div class='input_box'>
                 <a href='account.html' class='btn_done'>Done</a>
