--- a/NetWorkList_my03.html
+++ b/NetWorkList_my03.html
@@ -137,10 +137,14 @@
     <!-- 光箱・增加社群內容 -->
     <div id="myModal" class="modal">
       <div class='modal_boxs'>
+        <p class='team_title'>Delete Network?</p>
+        <p class='team_type text_left'>This action can not be undone. All contacts will be removed and network information will be deleted permanently. Are you sure you want to delete <i>[network name]</i> ?</p>
+        <label class="container">
+          <input type="checkbox" checked="checked">
+          <span class="team_type">I understand</span>
+        </label>
 
-        <div class='modal_box'>
-          
-        </div>
+          [Cancel] [Delete] (placement and color? should there be a network deleted banner? "[network name] deleted")
 
         <span class="lightbox_done" onclick="closeModal()">OK, Delete network</span>
       </div>
