--- a/NetWorkPage03.html
+++ b/NetWorkPage03.html
@@ -76,6 +76,7 @@
               <div class='all_box'>
                 <!-- 01.email-->
                 <div class='input_box borderBlue'>
+                  <div class='tip_box'><span class='prompt' data-showtip='email'></span></div>
                   <div class='social_box icon-email'></div>
                   <input class='inEnter' type="text" value="Lucy Redder">
                   <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
@@ -228,27 +229,85 @@
     <!-- 光箱・增加社群內容 -->
     <div id="myModal" class="modal">
       <div class='modal_boxs'>
+        <!-- 10/09 新增 P 區域 -->
+        <p class='team_title order_left text_left'>Select which platforms you want to add</p>
         <span class="lightbox_done" onclick="closeModal()">Done</span>
         <!-- <span class="close icon-x" onclick="closeModal()"></span> -->
 
         <div class='modal_box'>
-          <div class='check_social'><input class='icon-email' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-instagram' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-snapchat' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-facebook' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-phone' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-linkedin' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-twitter' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-youtube' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-tiktok' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-discord' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-slack' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-skype' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-reddit' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-groupme' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-whatsapp' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-line' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-www' type="checkbox" name=""></div>
+          <!-- 10/09 調整icon順序 ＋ 新增p -->
+          <div class='check_social'>
+            <input class='icon-email' type="checkbox" name="">
+            <p class='team_type padTD10'>E-mail</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-discord' type="checkbox" name="">
+            <p class='team_type padTD10'>Discord</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-facebook' type="checkbox" name="">
+            <p class='team_type padTD10'>Facebook</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-groupme' type="checkbox" name="">
+            <p class='team_type padTD10'>Groupme</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-instagram' type="checkbox" name="">
+            <p class='team_type padTD10'>Instagram</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-linkedin' type="checkbox" name="">
+            <p class='team_type padTD10'>Linkedin</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-line' type="checkbox" name="">
+            <p class='team_type padTD10'>Line</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-phone' type="checkbox" name="">
+            <p class='team_type padTD10'>Phone</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-reddit' type="checkbox" name="">
+            <p class='team_type padTD10'>Reddit</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-snapchat' type="checkbox" name="">
+            <p class='team_type padTD10'>Snapchat</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-slack' type="checkbox" name="">
+            <p class='team_type padTD10'>Slack</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-skype' type="checkbox" name="">
+            <p class='team_type padTD10'>Skype</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-twitter' type="checkbox" name="">
+            <p class='team_type padTD10'>Twitter</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-tiktok' type="checkbox" name="">
+            <p class='team_type padTD10'>Tiktok</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-venmo' type="checkbox" name="">
+            <p class='team_type padTD10'>Venmo</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-whatsapp' type="checkbox" name="">
+            <p class='team_type padTD10'>Whatsapp</p>
+          </div>   
+          <div class='check_social'>
+            <input class='icon-youtube' type="checkbox" name="">
+            <p class='team_type padTD10'>Youtube</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-www' type="checkbox" name="">
+            <p class='team_type padTD10'>www</p>
+          </div>
         </div>
       </div>
     </div>
