--- a/NetWorkPage05.html
+++ b/NetWorkPage05.html
@@ -78,31 +78,36 @@
                 <!-- 01.email-->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-email'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="abcdef568328@gmail.com">
+                  <input class='inEnter' type="text" value="abcdef568328@gmail.com">
+                  <a class='btn_status_box c_gray member icon-chain'></a>
                 </div>
 
                 <!-- 02.Instagram -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-instagram'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="LucyRedde">
+                  <input class='inEnter' type="text" value="LucyRedde">
+                  <a class='btn_status_box c_gray member icon-chain'></a>
                 </div>
 
                 <!-- 03.Snapchat -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-snapchat'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="lucyredde23">
+                  <input class='inEnter' type="text" value="lucyredde23">
+                  <a class='btn_status_box c_gray member icon-chain'></a>
                 </div>
 
                 <!-- 04.Facebook -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-facebook'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="lr123">
+                  <input class='inEnter' type="text" value="lr123">
+                  <a class='btn_status_box c_gray member icon-chain'></a>
                 </div>
 
                 <!-- 05.Phone -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-phone'></div>
-                  <input class='inEnter addEnter in_all' type="text" value="0912345678">
+                  <input class='inEnter' type="text" value="0912345678">
+                  <a class='btn_status_box c_gray member icon-chain'></a>
                 </div>
 
                 <div class='all_box btn_cent m_cent m_magTop45'>
