--- a/login.html
+++ b/login.html
@@ -83,7 +83,8 @@
 
               <div class='all_box magTop15'>
                 <!-- 10/05 修改style中的font-size -->
-                <p class='team_type team_gray' style='font-size:.9rem !important;'>This page is protected by reCAPTCHA, and subject to the <a href="#" class='link_little' style='font-size:1rem !important;'>Privacy Policy</a> and <a href="#" class='link_little' style='font-size:1rem !important;'>Terms of Service.</a></p>
+                <!-- 10/09 修改html樣式 -->
+                <p class='team_type team_gray' style='font-size:.9rem !important;'>This page is protected by reCAPTCHA, and subject to the <a href="#" class='link_little' style='font-size:.9rem !important;'>Privacy Policy</a> and <a href="#" class='link_little' style='font-size:.9rem !important;'>Terms of Service.</a></p>
               </div>
             </div>
 
