--- a/NetWorkList_my01.html
+++ b/NetWorkList_my01.html
@@ -71,21 +71,9 @@
 
               <div class='all_box padTB15 borderGray_TD'>
                 <p class='type_data_title'>My Shared Info</p>
-                <a href='NetWorkList_my04.html' class='link_icon icon-remove_red_eyevisibility'></a>
+                <!-- 10/09 新增樣式 line_admin -->
+                <a href='NetWorkList_my04.html' class='link_icon line_admin icon-remove_red_eyevisibility'></a>
               </div>
-
-              <!-- 網頁版・admin資訊露出・開始 (對應123行，同一個東西) -->
-              <div class='all_box m_not_show'>
-                <!-- 10/06 新增樣式no_pb10 -->
-                <p class='team_title no_pb10'>Admin</p>
-                <!-- 10/06 拿掉樣式input_box_top15，新增樣式input_box_TD85 -->
-                <div class='input_box input_box_TD85 borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
-                </div>
-              </div>
-              <!-- 網頁版・admin資訊露出・結束 -->
             </div>
 
 
@@ -98,6 +86,21 @@
                 </div>
 
                 <a href='NetWorkList_my01_v1.html' class='link_icon icon-createmode_editedit link_icon_search'></a>
+
+                <!-- 10/09 修改admin位置，並且html第149行的手機版admin -->
+                <div class='all_box borderGray_D'>
+                  <!-- 10/06 新增樣式no_pb10 -->
+                  <p class='team_title no_pb10'>Admin</p>
+                  <!-- 10/06 拿掉樣式input_box_top15，新增樣式input_box_TD85 -->
+                  <!-- 10/09 拿掉 borderGray , 更新上borderBrightblue -->
+                  <div class='input_box magTop7 borderBrightblue'>
+                    <div class='social_box social_box2 icon-user---anticoncopy-3'></div>
+                    <input class='inEnter' type="text" value="Lucy Redder">
+                    <!-- 10/09 拿掉 c_gray , 更新上 c_lb -->
+                    <a href='NetWorkList_my04.html' class='btn_status_box c_lb member icon-remove_red_eyevisibility' style='padding-right:10px;'></a>
+                  </div>
+                </div>
+                <!-- 網頁版・admin資訊露出・結束 -->
 
 
                 <!-- member -->
@@ -144,19 +147,20 @@
                 </div>
               </div>
 
-              <i class='m_border_all'></i><!-- 手機版・虛線 -->
+              <!-- 10//09 拿掉 手機版・虛線 -->
+              <!-- <i class='m_border_all'></i>--><!-- 手機版・虛線 -->
 
               <!-- 手機版・admin資訊露出・開始 -->
-              <div class='all_box padTB15 w_not_show'>
-                <!-- 10/06 新增樣式no_pb10 -->
+              <!-- <div class='all_box padTB15 w_not_show'>
+
                 <p class='team_title no_pb10'>Admin</p>
-                <!-- 10/06 拿掉樣式input_box_top15，新增樣式input_box_TD85 -->
+
                 <div class='input_box input_box_TD85 borderGray'>
                   <div class='social_box member_box icon-user---anticoncopy-3'></div>
                   <input class='inEnter' type="text" value="Lucy Redder">
                   <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
                 </div>
-              </div>
+              </div> -->
               <!-- 手機版admin資訊露出・結束 -->
 
             </div>
