--- a/NetWorkPage04_3.html
+++ b/NetWorkPage04_3.html
@@ -58,7 +58,9 @@
                 <div class='team_type_box'>
                   <div class='all_box'>
                     <!-- 9/28新增 title_link_icon -->
-                    <a href="NetWorkPage04.html" class='team_title title_link_icon'>Intern Team</a>
+                    <a href="NetWorkPage04.html" class='team_title'>Intern Team</a>
+                    <!-- 10/11新增 a -->
+                    <a href="NetWorkPage04.html" class='btn_status_box c_blue member icon-chain' style="margin-top: -3px;"></a>
                   </div>
                   <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
