--- a/NetWorkList_my01.html
+++ b/NetWorkList_my01.html
@@ -24,9 +24,9 @@
     <div class='page_boxs'>
       <div class='page_box'>
         <header>
-          <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
+          <a href="index.html" class='link_home'><img src="img/W_logo.svg"></a>
           <!-- 9/26 新增 -->
-          <a href="index.html" class='m_link_home'><img src="img/W_logo@2x.png"></a>
+          <a href="index.html" class='m_link_home'><img src="img/W_logo@2x.svg"></a>
           <nav>
             <div class='nav_boxs'>
               <a href="on_NetWorkPage01.html">JOIN an NETWORK</a>
@@ -181,7 +181,7 @@
     <!-- 手機menu -->
     <div class='menu_boxs'>
       <div class='all_box m_magTD30 m_padSID20'>
-        <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
+        <a href="index.html" class='link_home'><img src="img/W_logo.svg"></a>
         <a class='icon-x'></a>
       </div>
 
