--- a/index_login.html
+++ b/index_login.html
@@ -28,8 +28,8 @@
       <div class='i_box_r'>
         <div class='i_cent_type'>
           <div class='ir_boxs'>
-            <img class='ir_img order_left' src="img/W_logo.png">
-            <a href="index.html" class='m_link_home'><img src="img/W_logo@2x.png"></a>
+            <img class='ir_img order_left' src="img/W_logo.svg">
+            <a href="index.html" class='m_link_home'><img src="img/W_logo@2x.svg"></a>
 
             <!-- 10/05 新增區域-->
             <div class='log_box order_right'>
@@ -85,7 +85,7 @@
     <!-- 手機menu -->
     <div class='menu_boxs'>
       <div class='all_box m_magTD30 m_padSID20'>
-        <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
+        <a href="index.html" class='link_home'><img src="img/W_logo.svg"></a>
         <a class='icon-x'></a>
       </div>
 
