--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class='i_cent_type'>
           <div class='ir_boxs'>
             <!-- 9/26 新增 ir_img-->
-            <img class='ir_img order_left' src="img/W_logo.png">
+            <img class='ir_img order_left' src="img/W_logo.svg">
             <!-- 9/26 新增 m_ir_img-->
-            <img class='m_ir_img order_left' src="img/W_logo@2x.png">
+            <img class='m_ir_img order_left' src="img/W_logo@2x.svg">
             <a href="login.html" class='link_login order_right'>LOG IN</a>
           </div>
 
