--- a/MyQRLink03.html
+++ b/MyQRLink03.html
@@ -67,7 +67,7 @@
               <div class='all_box padTB15 m_no_space'>
                 <p class='note_type'>Share the link or use camera to scan QR code:</p>
                 <div class='input_box input_box_top15 borderGray'>
-                  <div class='toEnter networklink'><a href="#" class='addEnter' >http://selectnshare/haleyhob</a></div>
+                  <div class='toEnter networklink'><a href="#" class='addEnter' >http://contact-app.chiliman.com.tw/qrlink/add/X280X200l0Y971v9N01153o4D5T0</a></div>
                   <button class='btn_status_box c_blue member icon-content_copy'></button>
                 </div>
 
