--- a/NetWorkList_ot02.html
+++ b/NetWorkList_ot02.html
@@ -62,7 +62,8 @@
                 <div class='team_pic_box'><img src="img/team.png"></div>
                 <div class='team_type_box'>
                   <div class='all_box'>
-                    <a href="NetWorkList_ot01.html" class='team_title'>Intern Team</a>
+                    <!-- 1119新增 -->
+                    <a href="NetWorkList_ot01.html" class='team_title t-under'>Intern Team</a>
                   </div>
                   <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
