--- a/account.html
+++ b/account.html
@@ -74,9 +74,9 @@
                 <button class='btn_status_box w_50 c_gray icon-eye-slash'></button>
               </div>
 
-              <div class='all_box w_cent magTop30 bottom_box'>
+              <!-- <div class='all_box w_cent magTop30 bottom_box'>
                 <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">delete My Account</button>
-              </div>
+              </div> -->
             </div>
 
             <i class='m_border'></i><!-- 手機版・虛線 -->
@@ -119,9 +119,9 @@
                   <input class='inEnter in_all' type="text" value="0912345678">
                 </div>
 
-                <div class='all_box w_cent magTop30 bottom_box2'>
+                <!-- <div class='all_box w_cent magTop30 bottom_box2'>
                   <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">delete My Account</button>
-                </div>
+                </div> -->
               </div>  
             </div>
           </div>
