--- a/on_CreatQRLink01_v2.html
+++ b/on_CreatQRLink01_v2.html
@@ -49,12 +49,12 @@
         </header>
 
         <main>
-          <div class='cent_boxs cent_web'>
-            <div class='bread mob-open'>
-              <div class="bread_box"><a href="index.html" class="bread_link">Home</a></div>
-              <div class="bread_box"><a href="account.html" class="bread_link">My Account</a></div>
-            </div>
+          <div class='bread2'>
+            <div class="bread_box2"><a href="index.html" class="bread_link2">Home</a></div>
+            <div class="bread_box2"><a href="account.html" class="bread_link2">My Account</a></div>
+          </div>
 
+          <div class='cent_boxs cent_web'>
             <div class='cent_box cent_box50'>
               <a href="account.html" class='m_title_type type_uppercase'>Lucy Redder</a>
             </div>
@@ -63,11 +63,6 @@
 
             <div class='cent_box cent_box50'>
               <a href="MyQRLink01.html" class='m_top_type order_right m_order_no'>QR Links You Created</a>
-            </div>
-
-            <div class='bread mob-close'>
-              <div class="bread_box"><a href="index.html" class="bread_link">Home</a></div>
-              <div class="bread_box"><a href="account.html" class="bread_link">My Account</a></div>
             </div>
           </div>
 
