--- a/account02.html
+++ b/account02.html
@@ -58,9 +58,11 @@
 
           <div class='cent_boxs cent_bottom_box' style='min-height: 500px;'>
             <div class='cent_box cent_box35'>
+              <!-- 第63-65行 11/23 新增 -->
               <div class='all_box magD30'>
-                <p class='type_data_title'>My Account Info</p>
-                <a href='account.html' class='btn_done'>Done</a>
+                <p class='type_data_title' style="line-height: 35px;">My Account Info</p>
+                <a href='account.html' class='btn_done'>DONE</a>
+                <a href='account.html' class='btn_done btn_close_g' style='margin-right: 8px;'>CLOSE</a>
               </div>
 
               <p class='type_13'>ID:</p>
@@ -84,9 +86,9 @@
                 <button class='btn_status_box w_50 c_gray icon-eye-slash'></button>
               </div>
 
-              <div class='all_box w_cent magTop30 bottom_box'>
-                <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">delete My Account</button>
-              </div>
+              <!-- <div class='all_box w_cent magTop30 bottom_box'> -->
+                <!-- <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">delete My Account</button> -->
+              <!-- </div> -->
             </div>
 
             <i class='m_border'></i><!-- 手機版・虛線 -->
@@ -129,10 +131,15 @@
                   <input class='inEnter in_all' type="text" value="0912345678">
                 </div>
 
-                <div class='all_box w_cent magTop30 bottom_box2'>
+                <!-- <div class='all_box w_cent magTop30 bottom_box2'>
                   <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">delete My Account</button>
-                </div>
-              </div>  
+                </div> -->
+              </div> 
+
+              <!-- 第139-142行 11/23 新增 -->
+              <div class='all_box btn_cent m_cent'>
+                <button class='btn_add icon-plus' onclick="openModal();currentSlide(1)"></button>
+              </div> 
             </div>
           </div>
         </main>
@@ -145,6 +152,92 @@
             <a href="#" class='footer_menu'>Contact Us</a>
           </div>
         </footer>
+      </div>
+    </div>
+
+    <!-- 光箱・增加社群內容 -->
+    <div id="myModal" class="modal">
+      <div class='modal_boxs'>
+        <!-- 10/09 新增 P 區域 -->
+        <p class='team_title order_left text_left'>Select which platforms you want to add</p>
+        <span class="lightbox_done" onclick="closeModal()">Done</span>
+        <!-- <span class="close icon-x" onclick="closeModal()"></span> -->
+
+        <div class='modal_box'>
+          <!-- 10/09 調整icon順序 ＋ 新增p -->
+          <div class='check_social'>
+            <input class='icon-email' type="checkbox" name="">
+            <p class='team_type padTD10'>E-mail</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-discord' type="checkbox" name="">
+            <p class='team_type padTD10'>Discord</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-facebook' type="checkbox" name="">
+            <p class='team_type padTD10'>Facebook</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-groupme' type="checkbox" name="">
+            <p class='team_type padTD10'>Groupme</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-instagram' type="checkbox" name="">
+            <p class='team_type padTD10'>Instagram</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-linkedin' type="checkbox" name="">
+            <p class='team_type padTD10'>Linkedin</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-line' type="checkbox" name="">
+            <p class='team_type padTD10'>Line</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-phone' type="checkbox" name="">
+            <p class='team_type padTD10'>Phone</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-reddit' type="checkbox" name="">
+            <p class='team_type padTD10'>Reddit</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-snapchat' type="checkbox" name="">
+            <p class='team_type padTD10'>Snapchat</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-slack' type="checkbox" name="">
+            <p class='team_type padTD10'>Slack</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-skype' type="checkbox" name="">
+            <p class='team_type padTD10'>Skype</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-twitter' type="checkbox" name="">
+            <p class='team_type padTD10'>Twitter</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-tiktok' type="checkbox" name="">
+            <p class='team_type padTD10'>Tiktok</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-venmo' type="checkbox" name="">
+            <p class='team_type padTD10'>Venmo</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-whatsapp' type="checkbox" name="">
+            <p class='team_type padTD10'>Whatsapp</p>
+          </div>   
+          <div class='check_social'>
+            <input class='icon-youtube' type="checkbox" name="">
+            <p class='team_type padTD10'>Youtube</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-www' type="checkbox" name="">
+            <p class='team_type padTD10'>www</p>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -167,6 +260,17 @@
         <a href="index.html" class='link_brightBlue no_mark type_uppercase '>log out</a>
       </div>
     </div>
+
+    <!-- lightbox -->
+    <script>
+      function openModal() {
+        document.getElementById("myModal").style.display = "block";
+      }
+
+      function closeModal() {
+        document.getElementById("myModal").style.display = "none";
+      }
+    </script>
 
   </body>
 </html>
