--- a/NetWorkList_my01_v2.html
+++ b/NetWorkList_my01_v2.html
@@ -62,17 +62,17 @@
                 <div class='team_pic_box'><img src="img/team.png"></div>
                 <div class='team_type_box'>
                   <div class='all_box'>
-                    <div class='team_title' style="line-height: 38px;">Intern Team</div>
-                    <a href="NetWorkList_my02.html" class='link_icon icon-remove_red_eyevisibility'></a>
+                    <div class='team_title'>Intern Team</div>
+                    <a href="NetWorkList_my02.html" class='link_icon2 icon-remove_red_eyevisibility'></a>
                   </div>
                   <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
               </div>
 
               <div class='all_box padTB15 borderGray_TD'>
-                <p class='type_data_title' style="line-height: 38px;">My Shared Info</p>
+                <p class='type_data_title'>My Shared Info</p>
                 <!-- 10/09 新增樣式 line_admin -->
-                <a href='NetWorkList_my04.html' class='link_icon line_admin icon-remove_red_eyevisibility'></a>
+                <a href='NetWorkList_my04.html' class='link_icon2 line_admin icon-remove_red_eyevisibility'></a>
               </div>
             </div>
 
@@ -81,11 +81,11 @@
               <div class='all_box'>
                 <!-- search -->
                 <div class='input_box input_search borderBrightblue'>
-                  <div class='social_box serch_box icon-search'></div>
-                  <input class='inEnter addEnter' type="text" value="Search" onfocus="this.value=''" onblur="this.value='Search'">
+                  <div class='social_box serch_box icon-search' style='line-height:35px !important;'></div>
+                  <input class='inEnter addEnter' style='line-height:19px !important;' type="text" value="Search" onfocus="this.value=''" onblur="this.value='Search'">
                 </div>
 
-                <a href='NetWorkList_my01_v1.html' class='link_icon icon-createmode_editedit link_icon_search'></a>
+                <a href='NetWorkList_my01_v1.html' style='margin-top: 0;' class='link_icon2 icon-createmode_editedit link_icon_search'></a>
 
                 <!-- 10/09 修改admin位置，並且html第149行的手機版admin -->
                 <div class='all_box borderGray_D'>
