--- a/NetWorkList_my01_v2.html
+++ b/NetWorkList_my01_v2.html
@@ -81,8 +81,10 @@
               <div class='all_box'>
                 <!-- search -->
                 <div class='input_box input_search borderBrightblue'>
-                  <div class='social_box serch_box icon-search' style='line-height:35px !important;'></div>
-                  <input class='inEnter addEnter' style='line-height:19px !important;' type="text" value="Search" onfocus="this.value=''" onblur="this.value='Search'">
+                  <!-- 12/02 修正 s-btn-n -->
+                  <div class='social_box serch_box icon-search s-btn-n'></div>
+                  <!-- 12/02 修正 s-bar-n -->
+                  <input class='inEnter addEnter s-bar-n' type="text" value="Search" onfocus="this.value=''" onblur="this.value='Search'">
                 </div>
 
                 <a href='NetWorkList_my01_v1.html' style='margin-top: 0;' class='link_icon2 icon-createmode_editedit link_icon_search'></a>
